# HealthInk

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
agents/: symptom_agent.py
config/: settings.py
core/: llm.py  orchestrator.py  rag.py
ui/: Dockerfile  streamlit_app.py
