[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthlink"
version = "1.0.0"
description = "Smart Health Management System with AI-powered symptom analysis and doctor recommendations"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "HealthLink Team", email = "info@healthlink.local" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License"
]
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=2.5.3",
  "pydantic-settings>=2.1.0",
  "python-multipart>=0.0.6",
  "langchain>=1.0.0",
  "langchain-core>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-google-genai>=3.0.0",
  "pinecone>=3.0.0",
  "sqlalchemy>=2.0.25",
  "aiosqlite>=0.19.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.26.0",
  "tenacity>=8.2.3",
  "pandas>=2.1.4",
  "numpy>=1.26.3",
  "streamlit>=1.30.0",
  "plotly>=5.18.0"
]

[dependency-groups]
dev = [
  "pytest>=7.4.4",
  "pytest-asyncio>=0.23.3",
  "pytest-cov>=4.1.0"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
healthlink-api = "main:app"

